     for UI sounds, and moving the "Ready to start" sound to the turn bell channel.
   * Bug fix: another instance of "overlapping messages", this time with
     the planning mode activiation hotkey
   * Fix bug #21400: Use unit 'image' with higher priority than 'image_icon' for animation
     frames with no specified image.
   * New filesystem implementation based on boost filesystem
   * Added "--render-image" command-line argument, similar to --screenshot, but instead of a map,
     it takes a wesnoth imagepath and generates at bitmap with the filters applied.
   * New gettext implementation based on boost locale. This raises min boost requirement to 1.48,
     and adds a new dep (locale, filesystem was also added above)
   * New image scaling routine imported from the xBRZ project (HqMAME on sourceforge)
   * Now may save screenshots and other images as pngs, using SDL_SavePNG lib (from github)
   * Image path function ~XBRZ added, taking one argument, the scaling factor. A number 1-5.
   * Image path function ~SCALE_SHARP added, analogous to ~SCALE but using nearest neighbor algo.
   * Image path function ~PlOT_ALPHA added. Takes no arguments, plots the alpha channel in greyscale.
     Mainly useful for diagnostics of other ipf combinations, or debugging the engine itself.
   * Image path function ~WIPE_ALPHA added. Again mainly useful for diagnostics.
   * New RNG implementation using boost::mt19937, and boost::random_device for seeds.
     The boost random library is now a build requirement.

Version 1.11.11:
 * Add-ons server:
   * Filenames with whitespace in them are no longer allowed.
 * AI:
   * Non-default multiplayer and Micro AIs:
     * Fixed bugs which could lead to the AIs being disabled for the rest of the
       turn if WML events removed or changed units during the AI turn
     * Improved error reporting of invalid AI actions
 * Campaigns:
   * Eastern Invasion:
     * Updated maps for scenarios 12, 14, 16 and 17a.