@@ -380,6 +380,7 @@ Version 1.13.0-dev:
    * Fix bug #21400: Use unit 'image' with higher priority than 'image_icon' for animation
      frames with no specified image.
    * New filesystem implementation based on boost filesystem
+   * Added "--noaddons" command-line argument, prevents any add-ons from being loaded.
    * Added "--render-image" command-line argument, similar to --screenshot, but instead of a map,
      it takes a wesnoth imagepath and generates at bitmap with the filters applied.
    * New gettext implementation based on boost locale. This raises min boost requirement to 1.48,
